--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="#" class="https://www.linkedin.com/in/thefarhanahmed/">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
