--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://github.com/farhanahmed01" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://www.linkedin.com/in/thefarhanahmed/" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+              <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/farhan_clicks123/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
