--- a/index.html
+++ b/index.html
@@ -449,6 +449,8 @@
 
             </li>
 
+            
+
           </ul>
 
         </section>
@@ -462,7 +464,17 @@
           <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
-        <section class="projects"> 
+        <section class="projects">
+
+          <ul class="filter-list">
+
+            <li class="filter-item">
+              <button class="active" data-filter-btn>Web Development</button>
+            </li>
+
+           
+
+          </ul>
 
           <div class="filter-select-box">
 
@@ -475,19 +487,79 @@
               </div>
 
             </button>
-          </div>
-        </section>
-      </article>
 
+            <ul class="select-list">
+
+              <li class="select-item">
+                <button data-select-item>All</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web design</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Applications</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web development</button>
+              </li>
+
+            </ul>
+
+          </div>
+
+          <ul class="project-list">
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://ecommerce-store-theta.vercel.app/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-1.jpg" alt="Ecommerce" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Ecommerce</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://typing-speed-mu.vercel.app/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-2.jpg" alt="React-App" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">React-App</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+        </section>
+
+      </article>
 
       <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
         </header>
-        <section class="blog-posts">
+        <section>
+          <h3 class="hblog">Posting soon......</h3>
         </section>
-
       </article>
 
 
